# monarch-money-cli

./: .gitignore  README.md  pyproject.toml
docs/: releasing.md
evals/: README.md  monarch_parity.py
plans/: 2026-04-05-01-cli-bootstrap.md
scripts/: release_check.sh
skills/monarch-money-cli/: SKILL.md
skills/monarch-money-cli/agents/: openai.yaml
skills/monarch-money-cli/references/: repo-guide.md
src/monarch_cli/: cli.py  client.py  config.py  dates.py  render.py
tests/: test_cli.py  test_config.py  test_dates.py  test_package.py  test_render.py
