[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monarch-money-cli"
version = "0.1.0"
description = "CLI for Monarch Money built on the maintained community Python backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "monarchmoneycommunity>=1.2.0",
]

[project.scripts]
monarch = "monarch_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

